[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "spiritedtechnicalapplicationsoftware"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
python = "^3.8"
[tool.poetry.dev-dependencies]
